refactor model client/server to transform, add flow_factory tags, split flows by file

--- a/example/extract/extract_txt.ipynb
+++ b/example/extract/extract_txt.ipynb
@@ -33,7 +33,12 @@
     {
      "data": {
       "text/plain": [
-       "['ExtractTxtFlow']"
+       "{'basic': ['LinearFlow'],\n",
+       " 'extract': ['ExtractTxtFlow'],\n",
+       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLMQGFlow',\n",
+       "  'TransformOpenAIFlow']}"
       ]
      },
      "execution_count": 2,
@@ -43,9 +48,9 @@
    ],
    "source": [
     "from uniflow.extract.client import Client\n",
-    "from uniflow.extract.config import Config\n",
+    "from uniflow.extract.config import ExtractTxtConfig\n",
     "from uniflow.viz import Viz\n",
-    "from uniflow.extract.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
@@ -65,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client(Config())"
+    "client = Client(ExtractTxtConfig())"
    ]
   },
   {
@@ -77,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 11748.75it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 14513.16it/s]"
      ]
     },
     {
@@ -106,7 +111,7 @@
       "                       \"the concept of superlinear returns. And if you're \"\n",
       "                       'ambitious you definitely should, because this will be '\n",
       "                       'the wave you surf on.']}],\n",
-      "  'root': <uniflow.node.node.Node object at 0x1064b2650>}]\n"
+      "  'root': <uniflow.node.node.Node object at 0x10a85b820>}]\n"
      ]
     },
     {
@@ -206,7 +211,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x106393940>"
+       "<graphviz.graphs.Digraph at 0x105def940>"
       ]
      },
      "metadata": {},
