--- a/example/pipeline/pipeline.ipynb
+++ b/example/pipeline/pipeline.ipynb
@@ -33,7 +33,12 @@
     {
      "data": {
       "text/plain": [
-       "['ExtractTxtFlow']"
+       "{'basic': ['LinearFlow'],\n",
+       " 'extract': ['ExtractTxtFlow'],\n",
+       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLMQGFlow',\n",
+       "  'TransformOpenAIFlow']}"
       ]
      },
      "execution_count": 2,
@@ -44,7 +49,7 @@
    "source": [
     "from uniflow.pipeline import Pipeline\n",
     "from uniflow.config import PipelineConfig\n",
-    "from uniflow.extract.flow.flow_factory import FlowFactory\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
     "\n",
     "FlowFactory.list()"
    ]
@@ -76,10 +81,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 13148.29it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 177.45it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 373.03it/s]\n",
+      "100%|██████████| 1/1 [00:00<00:00, 892.79it/s]\n",
       "100%|██████████| 4/4 [00:03<00:00,  1.04it/s]\n",
-      "100%|██████████| 4/4 [00:04<00:00,  1.02s/it]\n"
+      "100%|██████████| 4/4 [00:03<00:00,  1.14it/s]\n"
      ]
     }
    ],
@@ -95,30 +100,30 @@
     {
      "data": {
       "text/plain": [
-       "[[{'output': [{'response': [\"question: What was one of the most important things you didn't understand about the world when you were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "[[{'output': [{'response': [\"question: What was something the speaker didn't understand about the world as a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b3cf250>},\n",
-       "  {'output': [{'response': ['question: What is the implication of the statement \"You get out what you put in\" mentioned in the context?\\nanswer: The implication is that if your product is only half as good as your competitor\\'s, you don\\'t get half as many customers, but you get no customers and go out of business.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x111890640>},\n",
+       "  {'output': [{'response': [\"question: What is the consequence of having a product that is only half as good as your competitor's?\\nanswer: You get no customers, and you go out of business.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b424850>},\n",
-       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: Fame, power, military victories, knowledge, and benefit to humanity.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x111890f10>},\n",
+       "  {'output': [{'response': ['question: Where else do we see the pattern of superlinear returns for performance?\\nanswer: We see the same pattern in fame, power, military victories, knowledge, and even benefit to humanity.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b424b80>},\n",
+       "   'root': <uniflow.node.node.Node at 0x111891330>},\n",
        "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because it will be the wave they surf on.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b424d60>}],\n",
-       " [{'output': [{'response': [\"question: What was one of the most important things you didn't understand about the world as a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
+       "   'root': <uniflow.node.node.Node at 0x111892710>}],\n",
+       " [{'output': [{'response': [\"question: What is one of the most important things you didn't understand about the world when you were a child?\\nanswer: The degree to which the returns for performance are superlinear.\"],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b427490>},\n",
-       "  {'output': [{'response': ['question: What does the phrase \"You get out what you put in\" imply?\\nanswer: It implies that the returns are linear, meaning you get results in direct proportion to the effort you put in.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x111893ac0>},\n",
+       "  {'output': [{'response': ['question: What do teachers and coaches often say about the relationship between effort and results?\\nanswer: \"You get out what you put in.\"'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b424940>},\n",
-       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: Fame, power, military victories, knowledge, and benefit to humanity.'],\n",
+       "   'root': <uniflow.node.node.Node at 0x111891060>},\n",
+       "  {'output': [{'response': ['question: What are some examples of superlinear returns for performance?\\nanswer: fame, power, military victories, knowledge, and benefit to humanity.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b4273d0>},\n",
-       "  {'output': [{'response': [\"question: Why is it important to understand the concept of superlinear returns?\\nanswer: It is important because it will be the wave you surf on if you're ambitious.\"],\n",
+       "   'root': <uniflow.node.node.Node at 0x111892bf0>},\n",
+       "  {'output': [{'response': ['question: Why should ambitious people understand the concept of superlinear returns?\\nanswer: Because this will be the wave they surf on.'],\n",
        "     'error': 'No errors.'}],\n",
-       "   'root': <uniflow.node.node.Node at 0x10b424580>}]]"
+       "   'root': <uniflow.node.node.Node at 0x111890eb0>}]]"
       ]
      },
      "execution_count": 6,
