--- a/example/transform/openai_json_model.ipynb
+++ b/example/transform/openai_json_model.ipynb
@@ -68,9 +68,9 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.model.client import Client\n",
-    "from uniflow.model.flow.flow_factory import FlowFactory\n",
-    "from uniflow.config import OpenAIConfig\n",
+    "from uniflow.transform.client import Client\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.model.config import OpenAIModelConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.schema import GuidedPrompt, Context\n",
@@ -93,7 +93,12 @@
     {
      "data": {
       "text/plain": [
-       "['BaseModelFlow', 'OpenAIModelFlow', 'HuggingFaceModelFlow', 'LMQGModelFlow']"
+       "{'basic': ['LinearFlow'],\n",
+       " 'extract': ['ExtractTxtFlow'],\n",
+       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLMQGFlow',\n",
+       "  'TransformOpenAIFlow']}"
       ]
      },
      "execution_count": 3,
@@ -184,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIConfig(\n",
+    "config = TransformOpenAIConfig(\n",
     "    guided_prompt_template=guided_prompt,\n",
     "    model_config=OpenAIModelConfig(\n",
     "        response_format={\"type\": \"json_object\"}\n",
@@ -209,12 +214,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:01<00:00,  1.18it/s]\n"
+      "100%|██████████| 2/2 [00:02<00:00,  1.24s/it]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'output': [{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
+       "      'question': 'What was the color of the sky?',\n",
+       "      'answer': 'blue.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x10a7334c0>},\n",
+       " {'output': [{'response': [{'context': 'My name is bobby and I am a talent software engineer working on AI/ML.',\n",
+       "      'question': 'What is your profession?',\n",
+       "      'answer': 'software engineer.'}],\n",
+       "    'error': 'No errors.'}],\n",
+       "  'root': <uniflow.node.node.Node at 0x10a7334f0>}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "output = client.run(input_data)"
+    "output = client.run(input_data)\n",
+    "output"
    ]
   },
   {
@@ -235,7 +260,7 @@
      "data": {
       "text/plain": [
        "{'response': [{'context': 'It was a sunny day and the sky color is blue.',\n",
-       "   'question': 'What color was the sky?',\n",
+       "   'question': 'What was the color of the sky?',\n",
        "   'answer': 'blue.'}],\n",
        " 'error': 'No errors.'}"
       ]
@@ -305,7 +330,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10555a8f0>"
+       "<graphviz.graphs.Digraph at 0x10565ba90>"
       ]
      },
      "metadata": {},
@@ -365,7 +390,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x105559990>"
+       "<graphviz.graphs.Digraph at 0x1056b5930>"
       ]
      },
      "metadata": {},
