--- a/example/transform/openai_model.ipynb
+++ b/example/transform/openai_model.ipynb
@@ -66,9 +66,9 @@
     "from dotenv import load_dotenv\n",
     "from IPython.display import display\n",
     "\n",
-    "from uniflow.model.client import Client\n",
-    "from uniflow.model.flow.flow_factory import FlowFactory\n",
-    "from uniflow.config import OpenAIConfig\n",
+    "from uniflow.transform.client import Client\n",
+    "from uniflow.flow.flow_factory import FlowFactory\n",
+    "from uniflow.transform.config import TransformOpenAIConfig\n",
     "from uniflow.viz import Viz\n",
     "from uniflow.schema import Context\n",
     "\n",
@@ -90,7 +90,12 @@
     {
      "data": {
       "text/plain": [
-       "['BaseModelFlow', 'OpenAIModelFlow', 'HuggingFaceModelFlow', 'LMQGModelFlow']"
+       "{'basic': ['LinearFlow'],\n",
+       " 'extract': ['ExtractTxtFlow'],\n",
+       " 'model': ['HuggingFaceModelFlow', 'OpenAIModelFlow'],\n",
+       " 'transform': ['TransformHuggingFaceFlow',\n",
+       "  'TransformLMQGFlow',\n",
+       "  'TransformOpenAIFlow']}"
       ]
      },
      "execution_count": 3,
@@ -152,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIConfig()\n",
+    "config = TransformOpenAIConfig()\n",
     "client = Client(config)"
    ]
   },
@@ -172,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00,  2.19it/s]\n"
+      "100%|██████████| 2/2 [00:01<00:00,  1.91it/s]\n"
      ]
     }
    ],
@@ -197,7 +202,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': ['question: What was the weather like on that day?\\nanswer: sunny.'],\n",
+       "{'response': ['question: What color is the sky on a sunny day?\\nanswer: blue.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -218,7 +223,7 @@
     {
      "data": {
       "text/plain": [
-       "{'response': [\"question: What is Bobby's profession?\\nanswer: Talent software engineer working on AI/ML.\"],\n",
+       "{'response': ['question: What is your profession?\\nanswer: I am a talented software engineer working on AI/ML.'],\n",
        " 'error': 'No errors.'}"
       ]
      },
@@ -287,7 +292,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x110e38d30>"
+       "<graphviz.graphs.Digraph at 0x1100ae230>"
       ]
      },
      "metadata": {},
@@ -347,7 +352,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x1152de740>"
+       "<graphviz.graphs.Digraph at 0x110274ca0>"
       ]
      },
      "metadata": {},
