--- a/example/transform/self_instruct_html_source.ipynb
+++ b/example/transform/self_instruct_html_source.ipynb
@@ -72,8 +72,8 @@
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from uniflow.model.client import Client\n",
-    "from uniflow.config import OpenAIConfig\n",
+    "from uniflow.transform.client import Client\n",
+    "from uniflow.config import TransformOpenAIConfig\n",
     "from langchain.document_loaders import UnstructuredHTMLLoader\n",
     "from dotenv import load_dotenv\n",
     "from uniflow.schema import Context\n",
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = OpenAIConfig()\n",
+    "config = TransformOpenAIConfig()\n",
     "client = Client(config)"
    ]
   },
@@ -202,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3/3 [00:02<00:00,  1.14it/s]\n"
+      "100%|██████████| 3/3 [00:03<00:00,  1.01s/it]\n"
      ]
     }
    ],
@@ -218,15 +218,15 @@
     {
      "data": {
       "text/plain": [
-       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.'],\n",
+       "[{'output': [{'response': ['question: How much information do the events have in terms of bits?\\nanswer: The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2858cb8e0>},\n",
-       " {'output': [{'response': ['question: What does information represent in the context of describing events?\\nanswer: The degree of surprise or the abstract possibility of the event.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x2899e4ac0>},\n",
+       " {'output': [{'response': ['question: How does information represent the degree of surprise or the abstract possibility of an event?\\nanswer: Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2858dc1c0>},\n",
-       " {'output': [{'response': ['question: Who published A Mathematical Theory of Communication in 1948?\\nanswer: Claude E. Shannon.'],\n",
+       "  'root': <uniflow.node.node.Node at 0x2899e4970>},\n",
+       " {'output': [{'response': ['question: Who introduced the concept of information entropy for the first time?\\nanswer: Claude E. Shannon.'],\n",
        "    'error': 'No errors.'}],\n",
-       "  'root': <uniflow.node.node.Node at 0x2858cbac0>}]"
+       "  'root': <uniflow.node.node.Node at 0x2899e4e50>}]"
       ]
      },
      "execution_count": 10,
@@ -279,16 +279,16 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>How much information do the events have in terms of bits?</td>\n",
-       "      <td>The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.</td>\n",
+       "      <td>The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>What does information represent in the context of describing events?</td>\n",
-       "      <td>The degree of surprise or the abstract possibility of the event.</td>\n",
+       "      <td>How does information represent the degree of surprise or the abstract possibility of an event?</td>\n",
+       "      <td>Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Who published A Mathematical Theory of Communication in 1948?</td>\n",
+       "      <td>Who introduced the concept of information entropy for the first time?</td>\n",
        "      <td>Claude E. Shannon.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -296,10 +296,10 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                                question                                                                                    answer\n",
-       "0              How much information do the events have in terms of bits?   The events have 0 bits, 2 bits, ~5.7 bits, and ~225.6 bits of information respectively.\n",
-       "1   What does information represent in the context of describing events?                          The degree of surprise or the abstract possibility of the event.\n",
-       "2          Who published A Mathematical Theory of Communication in 1948?                                                                        Claude E. Shannon."
+       "                                                                                          question                                                                                                                                                                                      answer\n",
+       "0                                        How much information do the events have in terms of bits?                                                                                                       The events have 0 bits, 2 bits, 5.7 bits, and 225.6 bits of information respectively.\n",
+       "1   How does information represent the degree of surprise or the abstract possibility of an event?   Information represents the degree of surprise or the abstract possibility of an event by requiring more information to describe an unusual event and less information for a common event.\n",
+       "2                            Who introduced the concept of information entropy for the first time?                                                                                                                                                                          Claude E. Shannon."
       ]
      },
      "execution_count": 11,
